fix h3->h2 not have gap between headings

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -360,7 +360,7 @@ header {
   flex-direction: column;
   align-items: center;
 
-  h3 {
+  h2 {
     font-size: 1rem;
     font-weight: 600;
     color: #1E293B;
